3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
CVS changes since last release:

MSW 2001/01/31:
common/object.c: Fix that that spells cast on spaces with no floors get 
    set properly after the spell expires.
common/player.c: Use skill tools first (lockpicks, talismans, etc) before
    using native skills.  In this way, an object with bonus automatically
    gets used.
common/living.c:  Fix so that negative con bonuses work properly - fixes
    bug where a higher con could result in lower total hp due to improper
    calculation.

MSW 2001/01/30:
Complete rewrite of the exit handling code.  Hopefully as an effect, this will
fix the player appearing in the middle of the oceans.  I think the code
should also work better in many other areas.  Main enhancements is a 3x3
area for pets to follow player to new map, as well as golems now following
players to the new maps.
include/sproto.h, random_maps/rproto.h - rebuilt.
random_maps/random_map.c: Change generate_random_map to take a structure 
    with the random map paremeters.
random_maps/reader.l, reader.c: Add set_random_map_variable function that
    reads the map parameters from a char buffer.  Also, remove some leftover
    comments that were from the common/loader.l file.
random_maps/rogue_layout.c: Change some functions to be static so make proto
    doesn't collect them.
random_maps/standalone.c: Add opening of parms file into main function since
    it ws removed from the random_map.c file.
server/apply.c: Don't display the message of random maps to the players
    as they enter them, as this message is random map parameters, and not
    a real message.
server/login.c: #if 0 out using of the player loading element in the structure.