@@ -635,9 +635,15 @@ void esrv_send_face(NewSocket *ns,short face_num, int nocache)
     sl.buf = malloc(MAXSOCKBUF);
 
     if ((!nocache && ns->facecache) || ns->facemode==Send_Face_None ) {
-	strcpy((char*)sl.buf, "face ");
-	sl.len=5;
+	if (ns->sc_version >= 1026)
+	    strcpy((char*)sl.buf, "face1 ");
+	else
+	    strcpy((char*)sl.buf, "face ");
+
+	sl.len=strlen(sl.buf);
 	SockList_AddShort(&sl, face_num);
+	if (ns->sc_version >= 1026)
+	    SockList_AddInt(&sl, faces[face_num].checksum);
 	strcpy((char*)sl.buf + sl.len, new_faces[face_num].name);
 	sl.len += strlen(new_faces[face_num].name);
 	Send_With_Handling(ns, &sl);
