@@ -17,6 +17,16 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 CVS changes since last release:
 
+MSW 2001/02/02:
+common/item.c: Don't have armour item types get returned as magical if they
+    have an armour value - that is to be expected. This eliminates the false
+    positives that you otherwise get on armor when you cast detect magic.
+include/newserver/h: and checksum field to FaceInfo struct.  Update
+    version_sc to 1026.
+socket/init.c: calculate image checksums as we load the images.
+socket/request.c: If client is at least version_Sc 1026, use face1 protocol
+    command that includes the checksum.
+
 MSW 2001/01/31:
 common/object.c: Fix that that spells cast on spaces with no floors get 
     set properly after the spell expires.
